examples/bad/unknownvar.hid
/* Program will end with an unknown variable error */
int a;
print b;
